apps/cluster-addons/kubernetes-dashboard/app/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "infra.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kubernetes-dashboard-kong-proxy
          port: 80
