apps/cluster-addons/kubernetes-dashboard/app/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-dashboard-internal
  namespace: kubernetes-dashboard
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-dashboard-kong
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # Allow pods to communicate with any other pod in the same namespace
    - toEndpoints:
        - matchLabels: { }
  ingress:
    # Allow pods to receive traffic from any other pod in the same namespace
    - fromEndpoints:
        - matchLabels: { }
